2009-07-01  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (INCLUDES): turns out we need to include ../plugin
	here to deal with type-generated/type.h/etc.

	* type.h.in: fix annoying indent problem.

	* cbinding.h, dependencyproperty.g.cpp, type-generated.cpp,
	value.h, type.h: regen

2009-07-01  Larry Ewing  <lewing@novell.com>

	* textblock.cpp (ArrangeOverride): take alignment into account
	when computing our size.

2009-07-01  Jeffrey Stedfast  <fejj@novell.com>

	* textblock.cpp (ArrangeOverride): Set the available width on the
	layout so that it can properly align the text for center/right
	alignment.

2009-07-01  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Need to set the binding source when we are validating
	templates.

2009-07-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: SetMarkerTimeout: when unreffing self
	use a delayed timeout, since we can be the last ref, this
	ensures the stack is unwound first.

2009-06-30  Larry Ewing  <lewing@novell.com>

	* border.cpp (Render): get CornerRound rendering closer to the sl
	version.

2009-06-30  Chris Toshok  <toshok@ximian.com>

	* clock.h|cpp: Seeking doesn't start the clock.  And we have to
	support UpdateFromParentTime even while paused, since we can seek
	while paused.  Fixes 392 (along with actually fixing the test..)

2009-06-30  Chris Toshok  <toshok@ximian.com>

	* clock.h|cpp: fix Seek and SeekAlignedToLastTick.  fixed DRT
	tests 393 and 396.

2009-06-30  Jeffrey Stedfast  <fejj@novell.com>

	* fontmanager.cpp (style_diff): Improved a bit so that we never
	return G_MAXINT if any font by the same name is found, no matter
	what style differences there are.

2009-06-30  Jackson Harper  <jackson@ximian.com>

	* deepzoomimagetilesource.cpp: Parsers need to be freed.

2009-06-30  Alan McGovern  <amcgovern@novell.com>

	* popup.cpp: According to the docs, a popup which is GC'ed
	  should be closed. Ensure that this happens.

2009-06-30  Alan McGovern  <amcgovern@novell.com>
