@@ -1,3 +1,7 @@
+2009-06-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* audio.cpp: Play 24 bit audio unconditionally.
+
 2009-07-01  Chris Toshok  <toshok@ximian.com>
 
 	* Makefile.am (INCLUDES): turns out we need to include ../plugin
